<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClockEditMenu.ClockEditActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#219BCC"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clockEditTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ClockEditTitle"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveClock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ClockTimezoneDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Clock description"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/clockDescriptionInput"
                android:layout_width="237dp"
                android:layout_height="71dp"
                android:ems="10"
                android:hint="@string/ClockDescInputHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />


            <TextView
                android:id="@+id/clockTimezoneTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Clock Timezone"
                android:textAlignment="center"
                android:textSize="24sp" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteClockTimezoneSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/ClockTimezoneAutocorrectSelect" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ClockSaveButton"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <ImageButton
        android:id="@+id/BackButtonClockEditActivity"
        android:layout_width="80dp"
        android:layout_height="88dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/clockEditTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</androidx.constraintlayout.widget.ConstraintLayout>